# ao3pub-back

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: client.rs  error.rs  lib.rs  main.rs  routing.rs  state.rs  work.rs
src/routing/: publication_req.rs  root.rs
src/work/: metadata.rs
