[package]
name = "ao3pub-back"
version = "0.0.4"
authors = ["Nicola Clark <nicola@slottedspoon.dev>"]
edition = "2021"
description = "AO3 downloader/converter - backend"
readme = "README.md"
homepage = "https://ao3pub.slottedspoon.dev/about"
repository = "https://github.com/tweakdeveloper/ao3pub-back"
license = "MIT"
publish = false

[[bin]]
name = "ao3pub-back"
path = "src/main.rs"

[lib]
name = "ao3pub"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.6"
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.8", features = ["gzip"] }
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
url = "2.5.2"
